[gd_scene load_steps=5 format=3 uid="uid://b3xg8350uwuwl"]

[ext_resource type="FontFile" uid="uid://cam7bapqpcdf8" path="res://Assets/Fonts/_bitmap_font____romulus_by_pix3m-d6aokem.ttf" id="1_jxero"]
[ext_resource type="Script" uid="uid://cqaxmrjstwvis" path="res://Scripts/ui.gd" id="1_qdvrb"]
[ext_resource type="PackedScene" uid="uid://bevlo3crof07w" path="res://Scenes/touch_controls.tscn" id="3_nf4gj"]
[ext_resource type="FontFile" uid="uid://djcjuyoolr6e1" path="res://Assets/Fonts/alagard_by_pix3m-d6awiwp.ttf" id="4_2246s"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_qdvrb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 100
offset_right = 40.0
offset_bottom = 40.0

[node name="wave" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Current Wave: 0"

[node name="uptime" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Time Survived: 00:00"

[node name="score" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Score: 0"

[node name="coins" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Coins: 0"

[node name="saved_villagers" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Villagers Saved: 0"

[node name="lost_villagers" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Villagers Lost: 0"

[node name="remaining_villagers" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "Villagers Left: 0"

[node name="time_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "In-Game Time:"

[node name="date_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 20
text = "In-Game Date:"

[node name="touch_controls" parent="." instance=ExtResource("3_nf4gj")]

[node name="stats_container" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -24.0
offset_right = 127.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="player_damage" type="Label" parent="stats_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2246s")
theme_override_font_sizes/font_size = 20
text = "‚öî:"
horizontal_alignment = 1

[node name="player_speed" type="Label" parent="stats_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2246s")
theme_override_font_sizes/font_size = 20
text = "üèÉ:"
horizontal_alignment = 1

[node name="player_health" type="Label" parent="stats_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2246s")
theme_override_font_sizes/font_size = 20
text = "‚ù§Ô∏è:"
horizontal_alignment = 1
